--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "source": "/api/proxy",
             "destination": "/api/proxy.js"
+        },
+        {
+            "source": "/api/weather",
+            "destination": "/api/weather.js"
         }
     ]
 }
