--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "mason-worx-app",
-    "version": "1.0.0",
-    "dependencies": {
-        "node-fetch": "2.6.1"
-    }
+  "name": "mason-worx-app",
+  "version": "1.0.0",
+  "dependencies": {
+    "googleapis": "^140.0.1"
+  }
 }
